Mod. CatalogoServiceTest.java